refactor: resolve type error
